# ChangeLog for net-mail/uw-imap
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/uw-imap/ChangeLog,v 1.12 2003/02/12 08:17:45 vapier Exp $

  09 Feb 2003; Dean Bailey <alron@gentoo.org> uw-imap-2002b.ebuild, 
  uw-imap-2001a-r3.ebuild :
  Added !net-mail/vimap conflict.
  
*uw-imap-2002b (12 Jan 2003)

  12 Jan 2003; Nick Hadaway <raker@gentoo.org> uw-imap-2002b.ebuild,
  files/digest-uw-imap-2002b :
  Version bump.

*uw-imap-2002a (26 Dec 2002)

  26 Dec 2002; Nick Hadaway <raker@gentoo.org> uw-imap-2002a.ebuild,
  files/digest-uw-imap-2002a :
  Version bump.  No patches this time.  Plaintext passwd file
  authentication is currently turned of with ssl enabled.  The ssl 
  certs directory is now /etc/ssl/certs to match with the newest openssl
  builds.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*uw-imap-2001a-r3 (25 Sep 2002)

  24 Sep 2002; Nick Hadaway <raker@gentoo.org> uw-imap-2001a-r3.ebuild,
  files/digest-uw-imap-2001a-r3, files/gentoo-2001a-r3.diff,
  files/imap-2001a.4-patch-with-delete-fix.bz2 :
  Added initial Maildir support.  Much testing is needed.

*uw-imap-2001a-r2 (6 Jun 2002)

  17 Aug 2002; Nick Hadaway <raker@gentoo.org> uw-imap-2001a-r2.ebuild :
  Reverted mailsubdir option change as it may break many client installs.
  Disabled reverse DNS lookups.  Updated SSL configuration options.
  Changed imap login timeout from 3 minutes to 1 minute.
  
  16 Aug 2002; Nick Hadaway <raker@gentoo.org> uw-imap-2001a-r2.ebuild :
  Added support for the default mailsubdir to be ~/mail.  Almost
  added in support for the Y4K leap year bug fix, just in case the
  maintainer of uw-imap disappears for a millenia or two.

  6 Jun 2002; Donny Davies <woodchip@gentoo.org> uw-imap-2001a-r2.ebuild,
  uw-imap.pam, uw-imap.pam-system-auth, uw-imap.xinetd, uw-imaps.xinetd,
  uw-ipop2.xinetd, uw-ipop3.xinetd :