@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/uw-imap/Attic/uw-imap-2002a.ebuild,v 1.3 2003/02/13 14:43:07 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/uw-imap/Attic/uw-imap-2002a.ebuild,v 1.4 2003/03/20 17:17:15 gmsoft Exp $
 
 S=${WORKDIR}/imap-2002a
 
@@ -10,7 +10,7 @@ HOMEPAGE="http://www.washington.edu/imap/"
 
 LICENSE="as-is"
 SLOT="0"
-KEYWORDS="~x86 ~sparc ~ppc"
+KEYWORDS="~x86 ~sparc ~ppc ~hppa"
 IUSE="ssl mbox"
 
 PROVIDE="virtual/imapd"
